<resources>
    <string name="app_name">Italia Zone Alert</string>
    <string name="zona_gialla_oneline">Zona Gialla</string>
    <string name="zona_arancione_oneline">Zona Arancione</string>
    <string name="zona_rossa_oneline">Zona Rossa</string>
    <string name="zona_gialla">Zona\nGialla</string>
    <string name="zona_arancione">Zona\nArancione</string>
    <string name="zona_rossa">Zona\nRossa</string>
    <string name="rate">Recensisci sul Play Store</string>
    <string name="with_friend">Condividi l\'app con i tuoi amici</string>
    <string name="important_note">(*) Si precisa che questa sezione tiene conto esclusivamente delle misure introdotte da disposizioni nazionali. Le Regioni e le Province autonome possono adottare specifiche ulteriori disposizioni restrittive, di carattere locale, per conoscere le quali è necessario fare riferimento ai canali informativi istituzionali dei singoli enti.</string>
    <string name="sharing">Condividi</string>
    <string name="zona_gialla_text">Consentito circolare dalle 5 alle 22 nella stessa Regione.\nConsentita una sola visita al giorno a casa di parenti o amici, in massimo 2 persone più figli minori di 14 anni e persone disabili o non autosufficienti conviventi.\nVietato circolare dalle 22 alle 5 e spostarsi in altre Regioni, salvo comprovati motivi di lavoro, necessità o salute. \nRientro alla residenza, domicilio o abitazione sempre consentito.\n\nCentri e parchi commerciali chiusi nei giorni festivi e prefestivi. Restano aperti all\'interno farmacie, parafarmacie, presidi sanitari, punti vendita di generi alimentari, tabaccherie, edicole, librerie, vivai.\n\nAttività in presenza al 100% per scuole dell\'infanzia, elementari e medie. Alle scuole superiori didattica in presenza alternata per minimo il 50% e fino al 75% degli alunni. Università aperte/chiuse su autonoma decisione, in base all\'andamento dell\'epidemia.\n\nRiempimento massimo al 50% dei mezzi di trasporto pubblico locale, ad eccezione del trasporto scolastico dedicato.\n\nConsumazione in bar e ristoranti dalle 5 alle 18. Dalle 18 alle 22 permesso solo asporto di cibi e bevande dai locali con cucina. Consegna a domicilio senza limiti di orario. Vietato consumare cibi e bevande in strade o parchi dalle 18 alle 5.\n\nApertura di musei e mostre dal lunedì al venerdì, nel rispetto del distanziamento e delle altre misure di prevenzione.\n\nChiuse palestre, piscine, teatri, cinema. Aperti i centri sportivi.\n\nSospese le attività di sale scommesse, bingo, sale giochi e slot machine anche in bar e tabaccherie.</string>
    <string name="zona_arancione_text">Consentito circolare dalle 5 alle 22 nello stesso Comune. Consentita una sola visita al giorno a casa di parenti o amici, nello stesso Comune, in massimo 2 persone più figli minori di 14 anni e persone disabili o non autosufficienti conviventi. Dai Comuni fino a 5.000 abitanti, spostamenti consentiti anche entro i 30 km dai confini con divieto di andare nei capoluoghi di Provincia. Possibile spostarsi in altri Comuni per lavoro, salute o necessità o per servizi non presenti nel proprio. Vietato circolare dalle 22 alle 5, salvo comprovati motivi di lavoro, necessità o salute. Rientro alla residenza, domicilio o abitazione sempre consentito.\n\nCentri e parchi commerciali chiusi nei giorni festivi e prefestivi. Restano aperti all\'interno farmacie, parafarmacie, presidi sanitari, punti vendita di generi alimentari, tabaccherie, edicole, librerie, vivai.\n\nAttività in presenza al 100% per scuole dell\'infanzia, elementari e medie. Alle scuole superiori didattica in presenza alternata per minimo il 50% e fino al 75% degli alunni. Università aperte/chiuse su autonoma decisione, in base all\'andamento dell\'epidemia.\n\nRiempimento massimo al 50% dei mezzi di trasporto pubblico locale, ad eccezione del trasporto scolastico dedicato.\n\nConsumazione sempre vietata all\'interno di bar e ristoranti e nelle adiacenze. Dalle 5 alle 18 permesso l\'asporto di cibi e bevande da tutti i locali, dalle 18 alle 22 solo dai locali con cucina. Consegna a domicilio senza limiti di orario. Vietato consumare cibi e bevande in strade o parchi dalle 18 alle 5.\n\nChiusi musei, mostre, teatri, cinema, palestre e piscine. Aperti i centri sportivi.\n\nSospese le attività di sale scommesse, bingo, sale giochi e slot machine anche in bar e tabaccherie.</string>
    <string name="zona_rossa_text">Consentito circolare solo per lavoro, salute o necessità. Consentita una sola visita al giorno a casa di parenti o amici, nello stesso Comune, in massimo 2 persone più figli minori di 14 anni e persone disabili o non autosufficienti conviventi. Dai comuni fino a 5.000 abitanti, consentite le visite anche entro i 30 km dai confini con divieto di andare nei capoluoghi di Provincia. Rientro alla residenza, domicilio o abitazione sempre consentito.\n\nChiusi i negozi, i centri commerciali e i mercati. Restano aperti farmacie, parafarmacie, presidi sanitari, punti vendita di generi alimentari, tabaccherie, edicole, librerie, vivai e altri punti vendita di beni necessari.\n\nAperti barbieri, parrucchieri e lavanderie. Chiusi i centri estetici.\n\nAttività in presenza al 100% per scuole dell\'infanzia, elementari, prima media. Didattica a distanza al 100% per gli altri anni delle medie e per le scuole superiori. Università chiuse, salvo specifiche eccezioni.\n\nRiempimento massimo al 50% dei mezzi di trasporto pubblico locale, ad eccezione del trasporto scolastico dedicato.\n\nConsumazione sempre vietata all\'interno di bar e ristoranti e nelle adiacenze. Dalle 5 alle 18 permesso l\'asporto di cibi e bevande da tutti i locali, dalle 18 alle 22 solo dai locali con cucina. Consegna a domicilio senza limiti di orario. Vietato consumare cibi e bevande in strade o parchi dalle 18 alle 5.\n\nChiusi musei, mostre, teatri, cinema, palestre e piscine e centri sportivi. Consentita l\'attività motoria nei pressi dell\'abitazione e l\'attività sportiva individuale.\n\nSospese le attività di sale scommesse, bingo, sale giochi e slot machine anche in bar e tabaccherie.</string>
    <string name="rule_zone">Regole in base al colore</string>
    <string name="info">Info sull\'app</string>
    <string name="copyright">©Copyright 2021 Giancarlo Mennillo</string>
    <string name="loading">Caricamento…</string>
    <string name="information">©2021 Italia Zone Alert - Tutti i diritti riservati.\n\nApp Creata e sviluppata da Giancarlo\nMennillo.\n\nPer informazioni, problemi e suggerimenti su come migliorare l\'app manda una mail a:\n\ngiancarlo.mennillo@gmail.com\n\no usa il pulsante nel menu.\n\nLa mappa in tempo reale viene visualizzata e aggiornata in base ai dati del sito del governo italiano nella sezione “Faq sulle misure adottate dal Governo”:\nhttp://www.governo.it/it/articolo/domande-frequenti-sulle-misure-adottate-dal-governo/15638.\n\nLe informazioni riguardanti le regole in base al colore sono estratte dalle immagini pubblicate sulla pagina facebook \'\'Palazzo Chigi - Presidenza del Consiglio dei Ministri\'\':\nhttps://www.facebook.com/palazzochigi.it\n\nSi precisa che la sezione \'\'Regole in base al colore\'\' tiene conto esclusivamente delle misure introdotte da disposizioni nazionali. Le Regioni e le Province autonome possono adottare specifiche ulteriori disposizioni restrittive, di carattere locale, per conoscere le quali è necessario fare riferimento ai canali informativi istituzionali dei singoli enti.</string>
    <string name="version">Versione app:</string>
    <string name="actual_zone_rules">Disposizioni attualmente in vigore</string>
    <string name="connection_error">Errore di connessione!\nControlla la tua connessione ad internet e clicca su riprova.</string>
    <string name="retry">Riprova</string>
    <string name="fromDate">(Dal </string>
    <string name="linkUtiliText">Informazioni per cittadini Italiani in rientro dall’estero e cittadini stranieri in Italia:\nhttps://www.esteri.it/mae/it/ministero/normativaonline/decreto-iorestoacasa-domande-frequenti/focus-cittadini-italiani-in-rientro-dall-estero-e-cittadini-stranieri-in-italia.html\n\nNormative attualmente in vigore:\nhttps://www.esteri.it/mae/it/ministero/normativaonline/normativa-altre-amministrazioni.html\n\nFAQ del Governo sugli spostamenti in Italia:\nhttp://www.governo.it/it/articolo/domande-frequenti-sulle-misure-adottate-dal-governo/15638\n\nSito Viaggiare Sicuri per approfondimenti sui rientri :\nhttp://www.viaggiaresicuri.it/</string>
    <string name="links">Link utili</string>
    <string name="infoTitle">Info</string>
    <string name="rules_not_available">Nessuna Disposizione in vigore al momento</string>
</resources>